[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GameServer.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlayerVerification.gd" type="Script" id=2]
[ext_resource path="res://Scripts/StateProcessing.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MatchMaking.gd" type="Script" id=4]

[node name="GameServer" type="Node"]
script = ExtResource( 1 )

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource( 2 )

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]
wait_time = 30.0
autostart = true

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MatchMaking" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MMChecker" type="Timer" parent="MatchMaking"]
wait_time = 5.0
autostart = true

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
rect_min_size = Vector2( 992, 520 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerUpdate" type="ScrollContainer" parent="ColorRect/HBoxContainer"]
margin_right = 500.0
margin_bottom = 568.0
rect_min_size = Vector2( 500, 520 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/ServerUpdate"]

[node name="ServerInfo" type="ScrollContainer" parent="ColorRect/HBoxContainer"]
margin_left = 525.0
margin_right = 925.0
margin_bottom = 568.0
rect_min_size = Vector2( 400, 520 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo"]
margin_right = 460.0
margin_bottom = 86.0

[node name="PlayerCounter" type="HBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer"]
margin_right = 460.0
margin_bottom = 14.0

[node name="ConstLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/PlayerCounter"]
margin_right = 84.0
margin_bottom = 14.0
text = "Player Count:"

[node name="UpdateLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/PlayerCounter"]
margin_left = 88.0
margin_right = 96.0
margin_bottom = 14.0
text = "0"

[node name="InGame" type="HBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 460.0
margin_bottom = 32.0

[node name="ConstLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/InGame"]
margin_right = 59.0
margin_bottom = 14.0
text = "In Game:"

[node name="UpdateLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/InGame"]
margin_left = 63.0
margin_right = 383.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
text = "[]"
autowrap = true

[node name="InLobby" type="HBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer"]
margin_top = 36.0
margin_right = 460.0
margin_bottom = 50.0

[node name="ConstLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/InLobby"]
margin_right = 59.0
margin_bottom = 14.0
text = "In Lobby:"

[node name="UpdateLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/InLobby"]
margin_left = 63.0
margin_right = 383.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
text = "[]"
autowrap = true

[node name="Alive" type="HBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer"]
margin_top = 54.0
margin_right = 460.0
margin_bottom = 68.0

[node name="ConstLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/Alive"]
margin_right = 36.0
margin_bottom = 14.0
text = "Alive:"

[node name="UpdateLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/Alive"]
margin_left = 40.0
margin_right = 360.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
text = "[]"
autowrap = true

[node name="MatchmakingQueue" type="HBoxContainer" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer"]
margin_top = 72.0
margin_right = 460.0
margin_bottom = 86.0

[node name="ConstLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/MatchmakingQueue"]
margin_right = 136.0
margin_bottom = 14.0
text = "Matchmaking Queue:"

[node name="UpdateLabel" type="Label" parent="ColorRect/HBoxContainer/ServerInfo/VBoxContainer/MatchmakingQueue"]
margin_left = 140.0
margin_right = 460.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
text = "[]"
autowrap = true

[node name="GravityTimer" type="Timer" parent="."]

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_VerificationExpiration_timeout"]
[connection signal="timeout" from="MatchMaking/MMChecker" to="MatchMaking" method="_on_MMChecker_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
